<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="times"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="50sp"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_email"
        android:padding="5dp"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_password"
        android:padding="5dp"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfirmPassword"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirm_password"
        android:padding="5dp"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfirmPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_bg"

        android:text="@string/register"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/redirectToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSSigned"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/already_a_user_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp" />


</RelativeLayout>

